<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <ScrollView android:layout_width="wrap_content"
                android:layout_marginBottom="50dip"
                android:layout_height="wrap_content" android:padding="10dip">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/about_google_code"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:autoLink="web" android:textStyle="bold" android:textSize="15dip"
                      android:gravity="left" android:text="@string/about_google_code"/>
            <TextView android:id="@+id/about_program_text"
                      android:layout_marginTop="3dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:autoLink="web"
                      android:textStyle="bold" android:textSize="15dip" android:gravity="left"
                      android:text="@string/about_program_text"/>
            <TextView android:id="@+id/about_leaders_title"
                      android:layout_marginTop="3dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:layout_marginLeft="5dip"
                      android:textStyle="bold" android:text="@string/about_leaders_title"/>
            <TextView android:id="@+id/about_leaders_text"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="15dip" android:gravity="left"
                      android:text="@string/about_leaders_text"/>
            <TextView android:id="@+id/about_developers_title"
                      android:layout_marginTop="3dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:layout_marginLeft="5dip"
                      android:textStyle="bold" android:text="@string/about_developers_title"/>
            <TextView android:id="@+id/about_developers_text"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="15dip" android:gravity="left"
                      android:text="@string/about_developers_text"/>
            <TextView android:id="@+id/about_email"
                      android:layout_marginTop="3dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:autoLink="email"
                      android:textStyle="bold" android:textSize="15dip" android:gravity="left"
                      android:text="@string/about_email_text"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_marginTop="-50dip" android:gravity="bottom" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <Button android:id="@+id/about_exit_button"
                android:layout_width="100dip" android:layout_height="40dip"
                android:clickable="true"
                android:text="@string/about_exit_button_text"
                android:layout_centerInParent="true"
                android:onClick="onExitClick"/>
    </RelativeLayout>
</LinearLayout>