<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="10dip">

	<TextView android:id="@+id/tvAzimuthInputInfo" android:text="@string/geographical_coordinates"
		android:textSize="16sp" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center"
		android:layout_margin="10dip" />

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/azimuth" android:minWidth="110dip"
			android:textSize="@dimen/text_size_big" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<EditText android:text="0" android:id="@+id/azimuth"
			android:maxLines="1" android:numeric="integer" android:maxLength="3"
			android:layout_width="75dip" android:layout_height="wrap_content" />
		<TextView android:text="°" android:layout_width="wrap_content"
			android:textSize="@dimen/text_size_big" android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/distance" android:minWidth="110dip"
			android:textSize="@dimen/text_size_big" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<EditText android:text="0" android:id="@+id/distance"
			android:maxLines="1" android:numeric="integer" android:maxLength="5"
			android:layout_width="75dip" android:layout_height="wrap_content" />
		<TextView android:text="@string/meter" android:layout_width="wrap_content"
			android:textSize="@dimen/text_size_big" android:layout_height="wrap_content" />
	</LinearLayout>

	<Button android:text="@string/add_checkpoint" android:id="@+id/EnterButton"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="@dimen/text_size_big" android:onClick="onEnterClick"
		android:layout_marginTop="10dip" />
</LinearLayout>
