<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent" 
	android:layout_height="fill_parent">

	<TextView android:text="@string/ask_download_notebook" android:layout_gravity ="center" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/TextViewDownloadNoteBook"></TextView>
	<CheckBox android:text="@string/always_keep" android:id="@+id/CheckBox01"
		android:layout_height="wrap_content" android:layout_width="wrap_content"></CheckBox>


	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content" android:layout_height="fill_parent">
		<Button android:text="@string/yes" android:layout_height="wrap_content"
			android:id="@+id/ButtonYes" android:layout_width="140dip" ></Button>
		
		<Button android:text="@string/no" android:layout_height="wrap_content"
			android:id="@+id/ButtonNo" android:layout_width="140dip"></Button>

	</LinearLayout>

</LinearLayout>
 


